--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,15 +9,25 @@ section.hero {
 
 input[type="email"],
 input[type="password"],
+input[type="tel"],
 input[type="text"] {
-  @apply block w-full my-2 rounded-xl;
+  @apply block w-full mb-2 rounded-xl;
   @apply border p-2 border-gray-300 bg-gray-100;
 }
 
 input[type="email"]:disabled,
 input[type="password"]:disabled,
+input[type="tel"]:disabled,
 input[type="text"]:disabled {
   @apply bg-gray-300 border-0 text-gray-500 cursor-not-allowed;
+}
+
+label {
+  @apply text-gray-500 text-sm leading-tight px-1;
+}
+
+label + input {
+  @apply -mt-[2px];
 }
 
 button {
