--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,8 +30,9 @@ label + input {
   @apply -mt-[2px];
 }
 
-button {
-  @apply block w-full text-gray-700 font-semibold;
+button,
+.button {
+  @apply flex justify-center gap-2 w-full text-gray-700 font-semibold;
   @apply border border-gray-300 rounded-xl px-6 py-2;
 }
 
