--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@ section.hero {
   grid-template-columns: 0.4fr 0.6fr;
 }
 
+select,
 input[type="email"],
 input[type="password"],
 input[type="tel"],
@@ -37,7 +38,8 @@ button,
 }
 
 button[type="submit"],
-.submit {
+.submit,
+button.primary {
   @apply border-primary bg-primary text-white;
 }
 
