--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,11 @@ div.tabs > * {
 div.tabs > *.active {
   @apply bg-primary text-white;
 }
+
+.flying-button-parent button {
+  @apply border-primary bg-primary text-white rounded-full;
+}
+
+.flying-button-extra button {
+  @apply border-primary bg-primary text-white;
+}
